trying to fix overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
 body{
   background-color: rgb(71, 71, 71);
-  /* display:block; */
+  /* display:flex; */
     color: aliceblue;
+    max-height: min-content;
+    overflow: auto;
 }
 header {
 text-align: center;
@@ -9,9 +11,6 @@ font-size: xx-large;
 }
 .hide {
   display: none;
-}
-main {
-  min-height: 100%;
 }
 
 #startGame {
